[package]
authors = ["Mahdi Sharifi <devraymondsh@gmail.com>"]
categories = ["development-tools", "web-programming", "game-engines"]
description = "Embed the contents of a directory in your binary"
documentation = "https://docs.rs/include_directory"
edition = "2021"
keywords = ["assets", "include", "embed", "dir"]
license = "MIT"
name = "include_directory"
readme = "README.md"
repository = "https://github.com/devraymondsh/include_directory"
rust-version = "1.67.1"
version = "0.1.1"

[dependencies]

[dependencies.mime]
version = "0.3.16"
default-features = false

# [dependencies.new_mime_guess]
# version = "4.0.1"
# default-features = false

[dependencies.glob]
version = "0.3.1"
optional = true
default-features = false

[dependencies.include_directory_macros]
version = "^0.1.0"
path = "../macros"

[dev-dependencies]
tempfile = "3"

[features]
default = []
metadata = ["include_directory_macros/metadata"]
nightly = ["include_directory_macros/nightly"]

[package.metadata.docs.rs]
all-features = true
