[package]
authors = ["Mahdi Sharifi <devraymondsh@gmail.com>"]
description = "The procedural macro used by include_directory"
edition = "2021"
license = "MIT"
name = "include_directory_macros"
repository = "https://github.com/devraymondsh/include_directory"
rust-version = "1.67.1"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]

[dependencies.mime]
version = "0.3.16"
default-features = false

[dependencies.new_mime_guess]
version = "4.0.1"
default-features = false

[dependencies.proc-macro2]
version = "1.0.51"
default-features = false
features = ["proc-macro"]

[dependencies.quote]
version = "1.0.23"
default-features = false

[features]
nightly = []
metadata = []
